fix: alignment of h1 in projects & blogs page

--- a/styles.css
+++ b/styles.css
@@ -155,6 +155,6 @@ hr {
 	margin-left: 1rem;
 }
 
-.project-h1 {
+.h1-withHeight {
 	line-height: 2.5rem;
 }
